--- a/franz-app/locales/nl_NL.json
+++ b/franz-app/locales/nl_NL.json
@@ -82,8 +82,8 @@
     "1606221230-clear-the-franz-cache": "Schoon de Franz cache op",
     "1606221230-show-unread-message-badge-for-all-new-messages": "Toon ongelezen berichten badge voor alle nieuwe berichten",
     "1606221230-you-will-be-notified-about-all-new-messages-in-a-channel-not-just-username-channel-here": "Je zult een notificatie krijgen voor alle nieuwe berichten in een kanaal, niet alleen @username, @channel, @here, ...",
-    "1607011340-reload-service": "Reload Service",
+    "1607011340-reload-service": "Dienst herladen",
     "1607041400-app": "App",
-    "1607041500-general": "General",
-    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Leave Franz running in the notification area when window is closed"
+    "1607041500-general": "Algemeen",
+    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Laat Franz actief in de berichtgevings-balk als het venster gesloten wordt."
 }
