--- a/franz-app/locales/nl_NL.json
+++ b/franz-app/locales/nl_NL.json
@@ -85,5 +85,5 @@
     "1607011340-reload-service": "Dienst herladen",
     "1607041400-app": "App",
     "1607041500-general": "Algemeen",
-    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Laat Franz actief in de berichtgevings-balk als het venster gesloten wordt."
+    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Laat Franz actief in de berichtgevings-balk als het venster gesloten wordt"
 }
